@@ -1,5 +1,7 @@
 Changelog for mk-visual-explain:
 
+   * Queries of the form "... FROM (SELECT 1) AS X" crashed the tool.
+
 2007-11-04: version 1.0.4
 
    * Made command-line help easier to use.
